--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   uuid: ^3.0.6
   supabase_flutter: ^0.3.1
   get_it: ^7.2.0
+  syncfusion_flutter_xlsio: ^20.1.57-beta
+  intl: ^0.17.0
   
 dev_dependencies:
   flutter_test:
