--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   get_it: ^7.2.0
   syncfusion_flutter_xlsio: ^20.1.57-beta
   intl: ^0.17.0
+  crypto: ^3.0.2
   
 dev_dependencies:
   flutter_test:
